# sitemap_vuln_checker

./: .env.example  .gitignore  README.md  USAGE_GUIDE.md  app.py  new_modifications.md  pyproject.toml  resume.cfg  sitemap_guard.db  test.html  test_core_functionality.py  test_indentation_fixes.py
data/threat_feeds/: feed_f976554549d52c2b151f684fb53b2f0f.txt
reports/: httpx_out.json  live_targets.txt  sitemap_flowchart.html  targets.txt
scripts/: setup_env.py
sitemap_guard/: __init__.py  __main__.py  api.py  cli.py  config.py  flowchart.py  models.py  orchestrator.py  pipeline.py
sitemap_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sitemap_guard/autonomous/: __init__.py  decision_engine.py
sitemap_guard/crawler/: __init__.py  engine.py  link_extractor.py  robots.py  sitemap_gen.py
sitemap_guard/discovery/: __init__.py  internal_scanner.py
sitemap_guard/efficiency/: __init__.py  speed_optimizer.py
sitemap_guard/plugins/: __init__.py  base.py  cors_advanced.py  open_redirect.py
sitemap_guard/reporter/: comprehensive_reporter.py  csv_report.py  engine.py  enhanced_sitemap_report.py  html_report.py  json_report.py  terminal_report.py
sitemap_guard/scanner/: __init__.py  engine.py  headers.py
sitemap_guard/storage/: database.py  db.py
sitemap_guard/templates/: report.html
sitemap_guard/tools/: __init__.py  advanced_scanner.py
sitemap_guard/utils/: __init__.py  auto_fixer.py  bloom.py  bug_fixer.py  dns_recon.py  fingerprint.py  js_scanner.py  passive_recon.py  performance_optimizer.py  probe.py  project_cleaner.py  rate_limiter.py  remediations.py  threat_feeds.py  url_utils.py
