[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitemap-guard"
version = "2.0.0"
description = "Ultra-fast website sitemap crawler & vulnerability scanner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SiteMap Guard Contributors"},
]
keywords = ["security", "vulnerability-scanner", "sitemap", "crawler", "cybersecurity", "numba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    # ── API & Async Backend ──────────────────────────────
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.25.0",
    "aiohttp>=3.8.0",
    # ── Sitemap Parsing ──────────────────────────────────
    "ultimate-sitemap-parser>=0.4.0",
    # ── Headless Browser CDP ─────────────────────────────
    "playwright>=1.40.0",
    # ── CLI & Display & Web UI ───────────────────────────
    "click>=8.1.0",
    "rich>=13.7.0",
    "streamlit>=1.30.0",
    # ── Configuration ────────────────────────────────────
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # ── Fast JSON & Bloom Filter & Hash ──────────────────
    "orjson>=3.9.0",
    "rbloom>=1.4.0",
    "xxhash>=3.0.0",
    # ── Storage ──────────────────────────────────────────
    "aiosqlite>=0.19.0",
    # ── Logging ──────────────────────────────────────────
    "structlog>=24.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]
linux = [
    "uvloop>=0.19.0",
]

[project.scripts]
sitemap-guard = "sitemap_guard.cli:cli"

[tool.setuptools.packages.find]
include = ["sitemap_guard*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
